methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:5: error: value prendBiscuit is not a member of Boolean
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
  }  prendBiscuit()
     ^